<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gabrielarroyave.practica1_formulario.MainActivity"
    android:orientation="vertical"
    android:background="#f0e68c">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/registro"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loggin"
                android:textColor="#808000"
                android:textSize="20dp"
                android:id="@+id/tLoggin"/>
            
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/hloggin"
                android:textColor="#daa520"
                android:textColorHint="#daa520"
                android:inputType="textPersonName"
                android:textSize="15dp"
                android:id="@+id/eUsuario"
                />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password"
                android:textColor="#808000"
                android:textSize="20dp"
                android:id="@+id/tPassword"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/hpassword"
                android:textColor="#daa520"
                android:textColorHint="#daa520"
                android:inputType="textPassword"
                android:textSize="15dp"
                android:id="@+id/ePassword"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/verificar"
                android:textColor="#808000"
                android:textSize="20dp"
                android:id="@+id/tConfirmar"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/hpassword"
                android:textColor="#daa520"
                android:textColorHint="#daa520"
                android:inputType="textPassword"
                android:textSize="15dp"
                android:id="@+id/eConfirmar"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/email"
                android:textColor="#808000"
                android:textSize="20dp"
                android:id="@+id/tEmail"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/hemail"
                android:textColor="#daa520"
                android:textColorHint="#daa520"
                android:inputType="textEmailAddress"
                android:textSize="15dp"
                android:id="@+id/eEmail"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sexo"
                android:textColor="#808000"
                android:textSize="20dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/masculino"
                    android:textColor="#808000"
                    android:checked="true"
                    android:textSize="18dp"
                    android:id="@+id/rMasculino"
                    />
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/femenino"
                    android:textColor="#808000"
                    android:textSize="18dp"
                    android:id="@+id/rFemenino"
                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="0dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">


            <TextView
                android:id="@+id/tShowdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nacimiento"
                android:textColor="#556b2f"
                android:textSize="20dp"


                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ciudad"
                android:textSize="20dp"
                android:textColor="#556b2f"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#556b2f"
                android:id="@+id/sCiudad"
                android:background="#f0e68c"
                >
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hobbies"
                    android:textColor="#556b2f"
                    android:textSize="18dp"
                    android:id="@+id/tHobbies"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leer"
                    android:textColor="#556b2f"
                    android:id="@+id/cLeer"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cine"
                    android:textColor="#556b2f"
                    android:id="@+id/cCine"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comer"
                    android:textColor="#556b2f"
                    android:id="@+id/cComer"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deporte"
                    android:textColor="#556b2f"
                    android:id="@+id/cDeporte"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="115dp"
            android:layout_marginRight="115dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptar"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:id="@+id/bAceptar"
                android:background="#6b8e23"
                android:textColor="#ffffff"
                android:onClick="fAceptar"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:id="@+id/tInfoError"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tInformacion"
            android:textSize="20dp"
            />
        </LinearLayout>




</ScrollView>
